--- a/src/main/resources/assets/awesomefarmer/lang/uk_ua.json
+++ b/src/main/resources/assets/awesomefarmer/lang/uk_ua.json
@@ -1,3 +1,4 @@
 {
-  "key.awesomefarmer.farmer_mode": "Увімкнути режим фермера"
+  "key.awesomefarmer.farmer_mode": "Увімкнути режим фермера",
+  "category.awesomefarmer": "AwesomeFarmer"
 }
